# Previsao-de-tendencia-B3

./: .gitignore  README.md  config.py  data_collection.py  dataset.py  export_csv.py  features.py  process_data.py  pyproject.toml  requirements.txt
outputs/: dados_PETR4.csv
